<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".semana4_editarsitioActivity"
    android:background="@drawable/bg">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B0000000"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="150dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="377dp"
                android:layout_height="0dp"
                android:layout_marginTop="52dp"
                android:text="Editar Sitio"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="375dp"
                android:layout_height="488dp"
                android:layout_margin="16dp"
                android:layout_marginTop="84dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/semana4_sitio_editar_txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:hint="@string/sitio_insertar_txtNombre"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/semana4_sitio_editar_txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:gravity="center|start|center_horizontal|left"
                    android:hint="@string/sitio_insertar_txtDescripcion"
                    android:inputType="textMultiLine"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/semana4_sitio_editar_spnTipo"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/input_bg"
                    android:entries="@array/tipo_sitios"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:text="Digite Las cordenadas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/semana4_sitio_editar_txtLatitud"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:hint="@string/sitio_insertar_txtLatitud"
                    android:inputType="numberDecimal"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/semana4_sitio_editar_txtLongitud"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/input_bg"
                    android:ems="10"
                    android:hint="@string/sitio_insertar_txtLongitud"
                    android:inputType="numberDecimal"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/semana4_sitio_editar_btnVolver"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:background="@drawable/input_bg"
                        android:text="@string/sitio_insertar_btnVolver"
                        android:textColor="#F4EFEF"
                        android:textSize="16sp"
                        app:icon="@drawable/ic_volver"
                        app:iconGravity="textStart" />

                    <Button
                        android:id="@+id/semana4_sitio_editar_btnGuardar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="9dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:background="@drawable/input_bg"
                        android:text="@string/sitio_insertar_btnGuardar"
                        android:textColor="#F4EFEF"
                        android:textSize="16sp"
                        app:icon="@drawable/ic_guardar"
                        app:iconGravity="textStart" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>